--- a/index.css
+++ b/index.css
@@ -1,29 +1,44 @@
 .aside{
     width: 60%;
-    border:5px black solid ;
+    border:5px white solid ;
     border-left: 0;
 }
 .article{
     width: 40%;
-    border:5px black solid ;
+    border:5px white solid ;
     
 
+}
+body{
+    background: url(Links/img/main-fone.png);
 }
 main{
     display: flex;
 }
 .new{
     font-family: Otomanopee One;
-    width: 40%;
-    margin-left: 350px;
+    width: 60%;
+    margin-left: 20%;
+    color: white;
     
 }
 .news{
     font-family: Noto Sans KRd;
+    color: white;
+}
+.newspaper{
+    display: flex;
 }
 .nav-bar{
     display: flex;
     justify-content: space-around;
+    border: 5px white solid;
+    border-bottom: 0;
+    padding: 20px;
+}
+.nav-bar a{
+    color: white;
+    font-family: Alfa Slab One;
 }
 .nav-bar p{
     font-size: 18px;
@@ -31,4 +46,9 @@ main{
 .fat-bird{
     width: 20%;
     height: 100%;
+}
+.text-to-video{
+    font-size: 20px;
+    font-family: Alfa Slab One;
+    color: white;
 }
