--- a/index.css
+++ b/index.css
@@ -52,3 +52,13 @@ main{
     font-family: Alfa Slab One;
     color: white;
 }
+button{
+    width: 50%;
+}
+.attentions{
+    color: white;
+}
+footer{
+    border: 5px white solid;
+    border-top: 0;
+}
